# CS4380

./: .gitignore  Build.sh  CMakeLists.txt  CMakePresets.json  MonolithicMain.cpp  Project0_BinaryConversion.cpp  Project0_Converter.cpp  Project0_Converter.h  README.md  main.cpp  rootConfig.h  rootConfig.h.in  tests.cpp
ASMFramework/: CMakeLists.txt
ASMFramework/ASMFramework_UnitTests/: SingletonWrapperTests.cpp
ASMFramework/include/: ASMDirective.h  ASMFramework_GetVersion.h  ASMInstruction.h  Assembler.h  Directive.h  Instruction.h  LanguageDefinition.h  Pass.h  SingletonWrapper.h  Workpiece.h
ASMFramework/src/: ASMDirective.cpp  ASMFramework_GetVersion.cpp  ASMInstruction.cpp  Assembler.cpp  Directive.cpp  Instruction.cpp  LanguageDefinition.cpp  SingletonWrapper.cpp
ASM_4380/: ASM_4380_main.cpp  CMakeLists.txt
ASM_4380/ASM_4380_UnitTests/: ASM4380Tests.cpp  DirectivesTesting.cpp  InstructionsTesting.cpp  PassOneTests.cpp  PassThreeTests.cpp  PassTwoTests.cpp
ASM_4380/include/: ASM4380.h  LanguageDefinition_4380.h  PassOne.h  PassOne_Tokenization.h  PassThree.h  PassThree_Serialize.h  PassTwo.h  PassTwo_Assemble.h
ASM_4380/include/Directives/: BYT_DIR.h  CSTR_DIR.h  INT_DIR.h  STR_DIR.h
ASM_4380/include/Instructions/: ASM_Instructions.h  Instructions.h
ASM_4380/include/Instructions/Arth_INS/: ADD_INS.h  ADI_INS.h  DIVI_INS.h  DIV_INS.h  MULI_INS.h  MUL_INS.h  SUB_INS.h
ASM_4380/include/Instructions/Comp_INS/: CMPI_INS.h  CMP_INS.h
ASM_4380/include/Instructions/Heap_INS/: ALCI_INS.h  ALLC_INS.h  FREE_INS.h
ASM_4380/include/Instructions/Jump_INS/: BAL_INS.h  BGT_INS.h  BLT_INS.h  BNZ_INS.h  BRZ_INS.h  JMP_INS.h  JMR_INS.h
ASM_4380/include/Instructions/Logical_INS/: AND_INS.h  NOT_INS.h  OR_INS.h
ASM_4380/include/Instructions/Move_INS/: LDA_INS.h  LDB_INS.h  LDR_INS.h  MOVI_INS.h  MOV_INS.h  STB_INS.h  STR_INS.h
ASM_4380/include/Instructions/Multi_Thread_INS/: BLK_INS.h  END_INS.h  LCK_INS.h  RUN_INS.h  ULK_INS.h
ASM_4380/include/Instructions/Stack_INS/: PEEK_INS.h  PUSH_INS.h
ASM_4380/include/Instructions/TRP_INS/: TRP_INS.h
ASM_4380/src/: ASM4380.cpp  LanguageDefinition_4380.cpp  PassOne.cpp  PassOne_Tokenization.cpp  PassThree.cpp  PassThree_Serialize.cpp  PassTwo.cpp  PassTwo_Assemble.cpp
ASM_4380/src/Directives/: BYT_DIR.cpp  CSTR_DIR.cpp  INT_DIR.cpp  STR_DIR.cpp
ASM_4380/src/Instructions/Arth_INS/: ADD_INS.cpp  ADI_INS.cpp  DIVI_INS.cpp  DIV_INS.cpp  MULI_INS.cpp  MUL_INS.cpp  SUB_INS.cpp
ASM_4380/src/Instructions/Comp_INS/: CMPI_INS.cpp  CMP_INS.cpp
ASM_4380/src/Instructions/Heap_INS/: ALCI_INS.cpp  ALLC_INS.cpp  FREE_INS.cpp
ASM_4380/src/Instructions/Jump_INS/: BAL_INS.cpp  BGT_INS.cpp  BLT_INS.cpp  BNZ_INS.cpp  BRZ_INS.cpp  JMP_INS.cpp  JMR_INS.cpp
ASM_4380/src/Instructions/Logical_INS/: AND_INS.cpp  NOT_INS.cpp  OR_INS.cpp
ASM_4380/src/Instructions/Move_INS/: LDA_INS.cpp  LDB_INS.cpp  LDR_INS.cpp  MOVI_INS.cpp  MOV_INS.cpp  STB_INS.cpp  STR_INS.cpp
ASM_4380/src/Instructions/Multi_Thread_INS/: BLK_INS.cpp  END_INS.cpp  LCK_INS.cpp  RUN_INS.cpp  ULK_INS.cpp
ASM_4380/src/Instructions/Stack_INS/: PEEK_INS.cpp  POP_INS.cpp  PUSH_INS.cpp
ASM_4380/src/Instructions/TRP_INS/: TRP_INS.cpp
ProjASMs/: Arrays.asm  Arrays2.asm  HelloWorld.asm  P5.asm
UnitTests/: CMakeLists.txt
VMFramework/: Allocator.h  CMakeLists.txt  ISA.cpp  Instruction.h  MemoryManager.h  PointerMath.cpp  PointerMath.h  StackAllocator.cpp  StackAllocator.h
VMFramework/VMFramework_UnitTests/: MemoryManagerTests.cpp  PointerMathTests.cpp  StackAllocatorTests.cpp
VMFramework/include/: Allocator.h  DWORDMemoryMap.h  ExpandingHeapAllocator.h  HeapContainer.h  IHeapContainer.h  ISA.h  Instruction.h  LinearAllocator.h  Machine.h  MemoryManager.h  MemoryMap.h  PageAllocator.h  PointerMath.h  PoolAllocator.h  Process.h  StackAllocator.h  VMFramework_GetVersion.h
VMFramework/src/: Allocator.cpp  DWORDMemoryMap.cpp  LinearAllocator.cpp  Machine.cpp  MemoryManager.cpp  MemoryMap.cpp  PageAllocator.cpp  PointerMath.cpp  StackAllocator.cpp  VMFramework_GetVersion.cpp
VM_4380/: CMakeLists.txt  VM_4380_main.cpp
VM_4380/VM_4380_UnitTests/: ISA_4380Tests.cpp  InstructionsTests.cpp  Process_4380Tests.cpp  VM4380Tests.cpp
VM_4380/include/: ISA_4380.h  Process_4380.h  VM4380.h
VM_4380/include/Instructions/: ADD.h  DIV.h  Instructions.h  JMP_L.h  LDB_L.h  LDR_L.h  MOV.h  MUL.h  SUB.h  TRP.h  VM_Instructions.h
VM_4380/include/Instructions/Arth/: ADD.h  ADDI.h  DIV.h  DIVI.h  MUL.h  MULI.h  SUB.h
VM_4380/include/Instructions/Comp/: CMP.h  CMPI.h
VM_4380/include/Instructions/Heap/: ALCI.h  ALLC_L.h  ALLC_R.h  FREE.h
VM_4380/include/Instructions/Jump/: BAL_L.h  BAL_R.h  BGT.h  BLT.h  BNZ.h  BRZ.h  JMP_L.h  JMR.h
VM_4380/include/Instructions/Logical/: AND.h  NOT.h  OR.h
VM_4380/include/Instructions/Move/: LDA.h  LDB_L.h  LDB_R.h  LDR_L.h  LDR_R.h  MOV.h  MOVI.h  STB_L.h  STB_R.h  STR_L.h  STR_R.h
VM_4380/include/Instructions/Multi_Thread/: BLK.h  END.h  LCK.h  RUN.h  ULK.h
VM_4380/include/Instructions/Stack/: PEEK.h  POP.h  PUSH.h
VM_4380/include/Instructions/TRP/: TRP.h
VM_4380/src/: ISA_4380.cpp  Process_4380.cpp  VM4380.cpp
VM_4380/src/Instructions/: ADD.cpp  DIV.cpp  JMP_L.cpp  LDB_L.cpp  LDR_L.cpp  MOV.cpp  MUL.cpp  SUB.cpp  TRP.cpp
VM_4380/src/Instructions/Arth/: ADD.cpp  ADDI.cpp  DIV.cpp  DIVI.cpp  MUL.cpp  MULI.cpp  SUB.cpp
VM_4380/src/Instructions/Comp/: CMP.cpp  CMPI.cpp
VM_4380/src/Instructions/Heap/: ALCI.cpp  ALLC_L.cpp  ALLC_R.cpp  FREE.cpp
VM_4380/src/Instructions/Jump/: BAL_L.cpp  BAL_R.cpp  BGT.cpp  BLT.cpp  BNZ.cpp  BRZ.cpp  JMP_L.cpp  JMR.cpp
VM_4380/src/Instructions/Logical/: AND.cpp  NOT.cpp  OR.cpp
VM_4380/src/Instructions/Move/: LDA.cpp  LDB_L.cpp  LDB_R.cpp  LDR_L.cpp  LDR_R.cpp  MOV.cpp  MOVI.cpp  STB_L.cpp  STB_R.cpp  STR_L.cpp  STR_R.cpp
VM_4380/src/Instructions/Multi_Thread/: BLK.cpp  END.cpp  LCK.cpp  RUN.cpp  ULK.cpp
VM_4380/src/Instructions/Stack/: PEEK.cpp  POP.cpp  PUSH.cpp
VM_4380/src/Instructions/TRP/: TRP.cpp
